added to-do, imports, basic mixins, header/nav

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,22 @@
+.header{
+  .flex(row, space-around, center);
+  padding: 1rem;
+  
+  
+  .testborder(5px, solid, blue);
+
+  .head-flex{
+    .flex(row, space-between, center);
+  
+    .testborder(5px, solid, red);
+  
+    max-width: 800px;
+    width: 100%;
+  }
+
+    border-bottom: 2px dashed @navigation-border;
+  }
+
 .home {
 
   .content-section {
