--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,17 @@
-// Mixins in here
+//basic flex
+.flex(@direction, @justify, @align){
+    display: flex;
+    flex-direction: @direction;
+    justify-content: @justify;
+    align-items: @align;
+}
+
+//button style
+
+
+//Testing Border
+.testborder(@border-size, @border-style, @border-color){
+    border: @border-size;
+    border-style: @border-style;
+    border-color: @border-color;
+}
