--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,17 @@
-// Navigation Styles here
+nav{
+    .flex(row, center, center);
+    justify-self: flex-end;
+    .testborder(1px, solid, green);
+
+    a{
+        text-decoration: none;
+        color: @font-color;
+        font-size: 1.5rem;
+        font-weight: 500;
+        padding: 10px;
+        padding-left: 30px;
+        padding-right: 30px;
+
+
+    }
+}
