changed header to top-nav

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,20 +1,20 @@
-.header{
-  .flex(row, space-around, center);
-  padding: 1rem;
+// .header{
+//   .flex(row, space-around, center);
+//   padding: 1rem;
   
 
 
-  .head-flex{
-    .flex(row, space-between, center);
+//   .head-flex{
+//     .flex(row, space-between, center);
   
 
   
-    max-width: 800px;
-    width: 100%;
-  }
+//     max-width: 800px;
+//     width: 100%;
+//   }
 
-    border-bottom: 2px dashed @navigation-border;
-  }
+//     border-bottom: 2px dashed @navigation-border;
+//   }
 
 .home {
 
