--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,22 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.top-nav .nav-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+}
 nav {
   display: flex;
   flex-direction: row;
@@ -194,22 +210,6 @@ nav a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
-}
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  padding: 1rem;
-  border-bottom: 2px dashed #C0C0C0;
-}
-.header .head-flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 800px;
-  width: 100%;
 }
 .home .content-section {
   margin: 30px 0;
