Fixed nav padding, added header

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 .top-nav{
     .flex(row, space-around, center);
     padding: 1rem;
-      
+    padding-bottom: 0;
     .nav-flex{
       .flex(row, space-between, center); 
       max-width: 800px;
@@ -16,12 +16,13 @@
                 color: @font-color;
                 font-size: 1.5rem;
                 font-weight: 500;
-                padding: 10px;
-                padding-left: 30px;
-                padding-right: 30px;
+                padding: 30px;
 
 
             }
    }
-      border-bottom: 2px dashed @navigation-border;
+      
+   border-bottom: 2px dashed @navigation-border;
+
 }   
+}
