--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,7 @@ img {
   justify-content: space-around;
   align-items: center;
   padding: 1rem;
-  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 0;
 }
 .top-nav .nav-flex {
   display: flex;
@@ -183,22 +183,21 @@ img {
   align-items: center;
   max-width: 800px;
   width: 100%;
+  border-bottom: 2px dashed #C0C0C0;
 }
-nav {
+.top-nav .nav-flex nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   justify-self: flex-end;
 }
-nav a {
+.top-nav .nav-flex nav a {
   text-decoration: none;
   color: #212529;
   font-size: 1.5rem;
   font-weight: 500;
-  padding: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 30px;
 }
 .footer {
   width: 100%;
@@ -210,6 +209,15 @@ nav a {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home header {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home header img {
+  padding-top: 0;
+}
+.home header h2 {
+  padding-top: 1rem;
 }
 .home .content-section {
   margin: 30px 0;
