--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,22 +1,14 @@
-// .header{
-//   .flex(row, space-around, center);
-//   padding: 1rem;
-  
-
-
-//   .head-flex{
-//     .flex(row, space-between, center);
-  
-
-  
-//     max-width: 800px;
-//     width: 100%;
-//   }
-
-//     border-bottom: 2px dashed @navigation-border;
-//   }
-
 .home {
+
+  header{
+    img{
+      padding-top: 0;
+    }
+    h2{
+      padding-top: 1rem;
+    }
+    border-bottom: 2px dashed @navigation-border;
+  }
 
   .content-section {
     margin: 30px 0;
