--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,7 +7,16 @@
 }
 
 //button style
-
+.btn-style (@button-bg-color,@button-width,@button-border-style,@button-radius,@button-font-color,@button-padding,@button-font-size) {
+    background-color: @button-bg-color;
+    width: @button-width;
+    border-style: @button-border-style;
+    border-radius: @button-radius;
+    color: @button-font-color;
+    padding: @button-padding;
+    font-size: @button-font-size;
+  }
+  
 
 //Testing Border
 .testborder(@border-size, @border-style, @border-color){
