--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,7 +56,6 @@
       border-radius: 10px;
     }
   }
-
   .content-pick {
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
@@ -66,6 +65,12 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+    
+        .btn{
+          button{
+          .btn-style(@button-bg, 100%, hidden ,15px, white, 10px, 2.5rem);  
+          }
+        }
     }
   }
 }// home
