added mobile styles for nav

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -36,7 +36,7 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
-
+       
     .text-content {
       padding-left: 1%;
       padding-right: 0;
@@ -73,4 +73,5 @@
         }
     }
   }
-}// home
+}
+// home
