--- a/css/index.css
+++ b/css/index.css
@@ -185,6 +185,15 @@ img {
   max-width: 800px;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .top-nav .nav-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
 .top-nav nav {
   display: flex;
   flex-direction: row;
@@ -197,7 +206,12 @@ img {
   color: #212529;
   font-size: 1.5rem;
   font-weight: 500;
-  padding: 30px;
+  padding: 20px;
+}
+@media (max-width: 500px) {
+  .top-nav nav a {
+    padding-bottom: 5px;
+  }
 }
 .footer {
   width: 100%;
