--- a/css/index.css
+++ b/css/index.css
@@ -224,8 +224,14 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
-.home header {
+.home {
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home {
+    padding: 30px;
+    padding-top: 0;
+  }
 }
 .home header img {
   padding-top: 0;
@@ -233,57 +239,105 @@ img {
 .home header h2 {
   padding-top: 1rem;
 }
-.home .content-section {
+@media (max-width: 500px) {
+  .home header {
+    border-bottom: 2px dashed #C0C0C0;
+  }
+}
+.content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.home .content-section .text-content {
+@media (max-width: 500px) {
+  .content-section {
+    flex-direction: column;
+  }
+}
+.content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
-.home .content-section .img-content {
+@media (max-width: 500px) {
+  .content-section .text-content {
+    width: 100%;
+  }
+}
+.content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
-.home .content-section .img-content img {
+@media (max-width: 500px) {
+  .content-section .img-content {
+    width: 100%;
+  }
+}
+.content-section .img-content img {
   border-radius: 10px;
 }
-.home .inverse-content {
+.inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
 }
-.home .inverse-content .text-content {
+@media (max-width: 500px) {
+  .inverse-content {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.inverse-content .text-content {
   padding-left: 1%;
   padding-right: 0;
 }
-.home .inverse-content .img-content {
+.inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
-.home .content-destination {
+.content-destination {
   width: 75%;
   margin: 0 auto 30px;
 }
-.home .content-destination img {
+@media (max-width: 500px) {
+  .content-destination {
+    width: 100%;
+  }
+}
+.content-destination img {
   border-radius: 10px;
 }
-.home .content-pick {
+.content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: space-between;
 }
-.home .content-pick .destination {
+@media (max-width: 500px) {
+  .content-pick {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
-.home .content-pick .destination .btn button {
+@media (max-width: 500px) {
+  .content-pick .destination {
+    width: 90%;
+  }
+}
+.content-pick .destination .btn button {
   background-color: #17A2B8;
   width: 100%;
   border-style: hidden;
-  border-radius: 15px;
+  border-radius: 0.7rem;
   color: white;
   padding: 10px;
   font-size: 2.5rem;
