[Stretch ] Animation - see note in To-Do

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -98,7 +98,11 @@
         .btn{
           button{
           .btn-style(@button-bg, 100%, hidden ,.7rem, white, 10px, 2.5rem);  
+          
+          .super-button();
           }
+          //.name(1, 2, 3; something, else)
+          
         }
     }
   }
