--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,12 +16,26 @@
     padding: @button-padding;
     font-size: @button-font-size;
   }
-  
 
-//Testing Border
-.testborder(@border-size, @border-style, @border-color){
-    border: @border-size;
-    border-style: @border-style;
-    border-color: @border-color;
+
+.keyframes(@name; @arguments) {
+	@-moz-keyframes @name { @arguments(); }
+	@-webkit-keyframes @name { @arguments(); }
+	@keyframes @name { @arguments(); }
+}
+
+.animation(@arguments) {
+	animation: @arguments;
+}
+
+/* example */
+.super-button {
+	
+	.keyframes(fade-in;{
+		0% { opacity: 0; }
+		100% { opacity: 1; }
+		});
+
+	.animation(fade-in 0.2s linear infinite alternate)
 
 }
